--- a/index.html
+++ b/index.html
@@ -70,13 +70,9 @@
                 <h4>01</h4>
                 <h1 class="size-50">Know <br /> About me</h1>
                 <div class="h-50"></div>
-                <p>Appropriately maintain standards compliant total linkage with cutting-edge action items.
-                    Enthusiastically create seamless synergy rather than excellent value. Quickly promote premium
-                    strategic theme areas vis-a-vis.</p>
-                <p>Appropriately maintain standards compliant total linkage with cutting-edge action items.
-                    Enthusiastically create seamless synergy rather than excellent value.</p>
-                <!-- <div class="h-50"></div> <img src="img/Signature.svg" width="230" alt="" />
-                <div class="h-50"></div> -->
+                <p>Matheus Pereira currently works at the Institute for Sustainability and Innovation in Structural
+                    Engineering, University of Coimbra. Matheus does research in Acoustic Engineering.
+
             </div>
             <div class="col-md-6 about-img-div">
                 <div class="about-border" data-aos="fade-up" data-aos-delay=".5"></div>
@@ -100,34 +96,40 @@
                     <li class="timeline-event" data-aos="fade-up">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">April 2016 - Present</p>
-                            <h3>Geil,Danke! GmbH</h3>
-                            <h4>eines Web-Studios</h4>
-                            <p><strong>Projektmanagement mit Scrum</strong>
-                                <br>Ständiges Verbessern des agilen Entwicklungsprozesses beispielsweise durch Grunt,
-                                Yeoman, GIT, JIRA und BrowserStack.</p>
+                            <p class="timeline-event-thumbnail">February 2017 - present</p>
+                            <h3>University of Coimbra</h3>
+                            <h4>Department of Civil Engineering - Coimbra, Portugal</h4>
+                            <p><strong>Position:</strong>
+                                Researcher
+                                <br><strong>Description:</strong>
+                                Development of meta & smart- materials</p>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".2">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">November 2014 - Mars 2016</p>
-                            <h3>Freelancer</h3>
-                            <h4>Designer und Autor</h4>
-                            <p>Konzeption, Design und Produktion von Digitalen Magazinen mit InDesign, der Adobe Digital
-                                Publishing Suite und HTML5. Co-Autorin der Fachbücher "Digitales Publizieren für
-                                Tablets" und "Adobe Digital Publishing Suite" erschienen im dpunkt.verlag.</p>
+                            <p class="timeline-event-thumbnail">October 2016 - present</p>
+                            <h3>University of Coimbra</h3>
+                            <h4>Department of Civil Engineering - Coimbra, Portugal</h4>
+                            <p><strong>Position:</strong>
+                                PhD Student
+                                <br><strong>Description:</strong>
+                                Development of meta & smart- materials</p>
                         </div>
                     </li>
                     <li class="timeline-event" data-aos="fade-up" data-aos-delay=".4">
                         <label class="timeline-event-icon"></label>
                         <div class="timeline-event-copy">
-                            <p class="timeline-event-thumbnail">April 2014</p>
-                            <h3>konplan gmbh</h3>
-                            <h4>IT-Consultant</h4>
-                            <p><strong>Systemarchitektur, Consulting</strong>
-                                <br>Konzeption und Modellierung von Systemen und APIs für Digital Publishing und
-                                Entitlement nach SOA</p>
+                            <p class="timeline-event-thumbnail">January 2013 - February 2016
+                            </p>
+                            <h3>Universidade Federal de Santa Maria
+                            </h3>
+                            <h4>Department of Structures and Construction (DECC) - Brazil
+                            </h4>
+                            <p><strong>Position:</strong>
+                                Researcher
+                                <br><strong>Description:</strong>
+                                Development of meta & smart- materials</p>
                         </div>
                     </li>
                 </ul>
@@ -168,10 +170,10 @@
                             <!-- single work -->
                             <div class="col-md-4 col-sm-6  fashion logo">
                                 <a id="demo01" href="#animatedModal" class="portfolio_item"> <img
-                                        src="img/portfolio/01.jpg" alt="image" class="img-responsive" />
+                                        src="./img/metamaterial.jpg" alt="image" class="img-responsive" />
                                     <div class="portfolio_item_hover">
                                         <div class="portfolio-border clearfix">
-                                            <div class="item_info"> <span>Mockups in seconds</span> <em>Fashion /
+                                            <div class="item_info"> <span>Metamaterial</span> <em> Math /
                                                     Logo</em> </div>
                                         </div>
                                     </div>
